# ina3221

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml  check.yml  publish.yml
src/: driver.rs  flags.rs  helpers.rs  lib.rs  mode.rs  prelude.rs  registers.rs  voltage.rs
