[package]
name = "ina3221"
version = "0.4.3"
authors = ["Erik Rogers <erik@underlogic.tech>"]
edition = "2021"
repository = "https://github.com/UnderLogic/ina3221"
license = "MIT"
description = "Embedded driver for INA3221 triple-channel power monitor"
readme = "README.md"
keywords = ["i2c", "driver", "embedded-hal-driver", "ina3221", "power"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
bitflags = "1.3.2"
embedded-hal = "1.0.0-alpha.9"
ohms = "0.1.2"
